Setup grpc connection between patient-service and billing-service

--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.application.name=patient-service
 #spring.sql.init.mode=always
 
 server.port=4000
-
+billing.service.grpc.port = 9001
 logging.level.root = info
 
