--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -5,6 +5,15 @@ spring:
   cloud:
     gateway:
       routes:
+        #          REST CLIENT -> http://localhost:4005/auth/login
+        #          API GATEWAY -> http://auth-service:4000/login
+        #          AUTH SERVICE (SPRING BOOT APP) -> /patients -> Patients Array
+        - id: auth-service-route
+          uri: http://auth-service:4005
+          predicates:
+            - Path=/auth/**
+          filters:
+            - StripPrefix=1
         - id: patient-service-route
           uri: http://patient-service:4000
           predicates:
